fixing second row images alignmenr

--- a/css/style.css
+++ b/css/style.css
@@ -81,12 +81,27 @@ footer {
   letter-spacing: 0.004em;
 }
 
+.first-project-name {
+  border: 2px solid gray;
+  background-color: #333333;
+  border-radius: 5px;
+  height: 50px;
+  width: 100px;
+  padding: 10px;
+  font-size: larger;
+  font-weight: bolder;
+  top: 300px;
+  left: -800px;
+
+  position: relative;
+}
+
 .project-name {
   border: 2px solid gray;
   background-color: #333333;
   border-radius: 5px;
   height: 50px;
-  width: 15%;
+  width: 100px;
   padding: 10px;
   font-size: larger;
   font-weight: bolder;
@@ -106,9 +121,11 @@ hr {
 .second-row-projects {
   display: flex;
   flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: space-evenly;
-  gap: 30px;
+  justify-content: center;
+  width: 100%;
+}
+.second-row-img {
+  padding: 20px;
 }
 
 .contact-card {
@@ -124,4 +141,10 @@ i {
 .first-project {
   display: flex;
   justify-content: center;
+  margin-bottom: 20px;
+}
+
+.contact-icon {
+  display: flex;
+  flex-direction: row;
 }
